# ATAK-FutureSDR

./: Cargo.toml  README.md  build.gradle  build.sh  local.properties
.takdev/: plugin.properties
.takdev/aars/: takdevlint.aar
app/: build.gradle
app/src/main/: AndroidManifest.xml  jni
app/src/main/assets/: plugin.xml
app/src/main/java/com/atakmap/android/futuresdr/: AtakBridge.kt  FlowgraphManager.kt  FutureSDRDropDownReceiver.kt  FutureSDRMapComponent.java  FutureSDRMapComponent.kt  HardwareManager.kt
app/src/main/java/com/atakmap/android/futuresdr/plugin/: FutureSDRLifecycle.java  FutureSDRLifecycle.kt  FutureSDRTool.java  FutureSDRTool.kt  PluginNativeLoader.java  PluginNativeLoader.kt
app/src/main/java/org/futuresdr/atak/: PluginTemplateDropDownReceiver.kt  PluginTemplateMapComponent.java
app/src/main/java/org/futuresdr/atak/plugin/: PluginNativeLoader.java  PluginTemplateLifecycle.java  PluginTemplateTool.java
app/src/main/res/values/: strings.xml
src/: lib.rs
